시큐리티 커밋!!!!!!

--- a/src/main/resources/messages/message_security.properties
+++ b/src/main/resources/messages/message_security.properties
@@ -45,3 +45,9 @@ RunAsImplAuthenticationProvider.incorrectKey=The presented RunAsUserToken does n
 SubjectDnX509PrincipalExtractor.noMatching=No matching pattern was found in subjectDN: {0}
 SwitchUserFilter.noCurrentUser=No current user associated with this request
 SwitchUserFilter.noOriginalAuthentication=Could not find original Authentication object
+
+error.BadCredentials=아이디나 비밀번호가 일치하지 않습니다. 다시 확인해 주세요.
+error.Disaled=계정이 비활성화 상태입니다. 관리자에게 문의해 주세요.
+error.CredentialsExpired=비밀번호 유효기간이 만료되었습니다. 관리자에게 문의해 주세요.
+error.Locked=계정이 비활성화 상태입니다. 관리자에게 문의해 주세요.
+error.AccountExpired=계정이 만료되었습니다. 관리자에게 문의해 주세요.
